# GroundingDINODemo

./: .gitignore  LICENSE  README.md  app.py  gradio_app.py  pyproject.toml  requirements.txt
groundingdino/: _C.cp310-win_amd64.pyd
