[project]
dependencies = [
    "addict>=2.4.0",
    "gradio>=5.23.1",
    "pycocotools>=2.0.8",
    "supervision>=0.25.1",
    "timm>=1.0.15",
    "torch>=2.5.1",
    "torchvision>=0.20.1",
    "transformers>=4.50.1",
    "yapf>=0.43.0",
]
description = "Add your description here"
name = "groundingdinodemo"
readme = "README.md"
requires-python = ">=3.11"
version = "0.1.0"
[tool.uv.sources]
torch = {index = "pytorch-cu121"}
torchvision = {index = "pytorch-cu121"}

[[tool.uv.index]]
explicit = true
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
